--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "07_redux_xx",
-  "version": "0.1.0",
-  "private": true,
+  "name": "crm-portal",
+  "description": "mustafa bayer",
+  "version": "1.1.1",
   "dependencies": {
     "axios": "^0.17.1",
     "react": "^16.2.0",
@@ -11,6 +11,9 @@
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3"
+  },
+  "devDependencies": {
+    "react-scripts": "1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
