--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "1.1.1",
   "dependencies": {
     "axios": "^0.17.1",
+    "namor": "^1.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-table": "^6.8.2",
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3"
   },
