--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.1.1",
   "dependencies": {
     "axios": "^0.17.1",
+    "lodash": "^4.17.10",
     "namor": "^1.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
